--- a/react-portfolio/src/components/Sidebar/index.scss
+++ b/react-portfolio/src/components/Sidebar/index.scss
@@ -24,9 +24,9 @@
     }
 
     nav{
-        display: block;
+        display: grid;
         text-align: center;
-        position: absolute;
+        position: relative;
         height: 210px;
         top: 50%;
         margin-top: -120px;
